<resources>
    <string name="app_name">Calculator App</string>
    <string name="first_num">First Number</string>
    <string name="second_num">Second Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="no_operation_chosen_message">Please choose an operation.</string>
    <string name="show_ans_history">Show Answer History</string>
    <string name="return_button">Return</string>
</resources>