<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    android:backgroundTint="@color/md_theme_light_inverseOnSurface"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstNumberEditView"
        android:layout_width="297dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:hint="@string/first_num"
        android:inputType="number"
        android:padding="@dimen/all_padding"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onBackground"
        android:textColorHighlight="@color/md_theme_light_secondary"
        android:textColorHint="@color/md_theme_light_outline"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/mathOperationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:padding="@dimen/all_padding"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="@dimen/operation_button_size"
        android:layout_height="@dimen/operation_button_size"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:onClick="displayOperation"
        android:padding="@dimen/all_padding"
        android:text="@string/plus"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="@dimen/operation_button_size"
        android:layout_height="@dimen/operation_button_size"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:onClick="displayOperation"
        android:padding="@dimen/all_padding"
        android:text="@string/minus"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="@dimen/operation_button_size"
        android:layout_height="@dimen/operation_button_size"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:onClick="displayOperation"
        android:padding="@dimen/all_padding"
        android:text="@string/multiply"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="@dimen/operation_button_size"
        android:layout_height="@dimen/operation_button_size"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:onClick="displayOperation"
        android:padding="@dimen/all_padding"
        android:text="@string/divide"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <EditText
        android:id="@+id/secondNumberEditView"
        android:layout_width="297dp"
        android:layout_height="61dp"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:hint="@string/second_num"
        android:inputType="number"
        android:padding="@dimen/all_padding"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onBackground"
        android:textColorHighlight="@color/md_theme_light_secondary"
        android:textColorHint="@color/md_theme_light_outline"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="@dimen/operation_button_size"
        android:layout_height="@dimen/operation_button_size"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:onClick="solveEquation"
        android:padding="@dimen/all_padding"
        android:text="@string/equals"
        android:textColorLink="@color/md_theme_light_secondary"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <TextView
        android:id="@+id/solutionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:padding="@dimen/all_padding"
        android:text=""
        android:textColor="@color/md_theme_light_onBackground"
        android:textColorHighlight="@color/md_theme_light_secondary"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <Button
        android:id="@+id/showHistoryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margins"
        android:fontFamily="@font/capriola"
        android:onClick="switchScreens"
        android:padding="@dimen/all_padding"
        android:text="@string/show_ans_history"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />
</androidx.constraintlayout.widget.ConstraintLayout>